--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 a {
     outline: none;
     text-decoration: none;
+    color: black;
 }
 
 a:hover {
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 .main-div {
@@ -26,13 +27,18 @@ a:hover {
 }
 
 .links {
-    margin-top: 20px;
+    margin-top: 40px;
     text-align: center;
 }
 
 .tic-tac-toe {
     font-family: 'Love Ya Like A Sister', cursive;
     color: black;
+    font-size: 2em;
+}
+
+.other-work {
+    margin-top: 20px;
     font-size: 2em;
 }
 
