--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,15 @@
     margin: 0;
 }
 
+html body {
+    height: 100%;
+}
+
 a {
     outline: none;
     text-decoration: none;
     color: black;
+    transition: all 0.9s;
 }
 
 a:hover {
@@ -34,20 +39,18 @@ a:hover {
 .tic-tac-toe {
     font-family: 'Love Ya Like A Sister', cursive;
     color: black;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .other-work {
     margin-top: 20px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .github img {
     margin-top: 20px;
-    height: 2em;
+    height: 1.5em;
 }
-
-
 
 .name {
     font-family: 'Yatra One', cursive;
